@@ -2,9 +2,6 @@ _ Filters:
     _ Change TalkerChooser filter to use new SelectTalker dialog.
     _ Although one can configure Canadian English voice in Festival, there is no way to choose
       Canadian English in the Talker Chooser.
-    _ Provide a way for those apps with KTTSD plugins to disable KNotifies, otherwise, users
-      can't have both KNotify turned on and the app's plugin.  For example, Konversation or
-      Kopete.
     _ XHTMLtoSSML stylesheet needs work to provide better mappings for most web pages.
     _ Add KNewStuff capability for folks to upload/download filter configs.
 _ Audio Plugins:
@@ -41,9 +38,7 @@ _ KTTSMgr:
       be helpful when using advance/rewind buttons.  Perhaps to be effective, if the currently-selected
       job IS the currently speaking job, and that job finishes, would automatically select the next
       speaking job?  But that could become confusing for users with selection jumping around.
-    _ The "Passive popups only" checkbox on General tab is sometimes enabled when
-      "Speak notifications" is not checked.
-    _ Add ability to quickly pick default Talker to systray menu.
+    _ Add ability to quickly pick default Talker in systray menu.
     _ KCMultiDialog has a bug that won't allow sizing the screen narrower than 640.
     _ When speaking SSML, the window expands to maximum height to accomodate displaying the
       "Current Sentence", which is all of the SSML.  Annoying.  Better to not expand and display
